# HW5_Airllm-Quantization-Benchmark

./: .gitignore  README.md  get_hw.py  main.py  pyproject.toml
config/: rate_limits.json  setup.json
docs/: PLAN.md  PRD.md  PRD_airllm_pipeline.md  PRD_benchmarking.md  PRD_economic_analysis.md  PRD_plotter.md  TODO.md  prompt_log.md
experiments/: 01_hardware_doc.py  02_baseline_run.py  03_airllm_run.py  04_analysis_and_plots.py  05_economic_analysis.py  07_extension_pareto.py
reports/: report.md
src/hw5_airllm_benchmark/: __init__.py  constants.py  download_model.py
src/hw5_airllm_benchmark/sdk/: __init__.py  sdk.py
src/hw5_airllm_benchmark/services/: __init__.py  _economic_plotter.py  _perf_plotter.py  _ram_monitor.py  benchmarker.py  economic_analysis.py  plotter.py
src/hw5_airllm_benchmark/shared/: __init__.py  config.py  gatekeeper.py  version.py
tests/unit/: test_benchmarker.py  test_economic_analysis.py  test_plotter.py
